--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	<groupId>in.javahome</groupId>
 	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.6</version>
+	<version>3.5.1</version>
+	<configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+    </configuration>
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>
-    <properties>
-	<maven.compiler.source>1.8</maven.compiler.source>
-	<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
